hphp/hack/test/typecheck/classname/with_tconst_bad1.php.exp
File "with_tconst_bad1.php", line 11, characters 7-13:
Class CLoader does not correctly implement all required methods  (Typing[4110])
File "with_tconst_bad1.php", line 11, characters 23-29:
Some methods are incompatible with those declared in type ALoader
Read the following to see why:
File "with_tconst_bad1.php", line 7, characters 23-24:
Unable to satisfy constraint on this type constant
File "with_tconst_bad1.php", line 7, characters 29-29:
This is an object of type I
File "with_tconst_bad1.php", line 12, characters 19-26:
It is incompatible with an object of type stdClass
